frontend/test/should_pass/index_001.grg
#using "index_model_001.gm"

test t {
	n:N{foo==42} -e:E{bar==42}-> n;
}

rule r {
	n:N{ascending(foo>=42)} -e:E{ascending(bar<42)}-> n;
	
	replace {
	}
}

rule s {
	n:N{ascending(foo>=42, foo<1000)};
	-e:E{descending(bar<42, bar>0)}->;
	
	modify {
	}
}

/////////////////////////////

test tp(var x:int) {
	n:N{foo==x} -e:E{bar==x}-> n;
}

rule rp(var x:int) {
	n:N{ascending(foo>=x)} -e:E{ascending(bar<x)}-> n;
	
	replace {
	}
}

rule sp(var x:int, var y:int, var z:int) {
	n:N{ascending(foo>=x, foo<y)};
	-e:E{descending(bar<x, bar>z)}->;
	
	modify {
	}
}

test u {
	n:N{ascending(foo)} -e:E{descending(bar)}-> n;
}

/////////////////////////////

test te(x:N) {
	n:N{foo==x.i} -e:E{bar==n.i}-> n;
}

rule re(x:N) {
	n:N{ascending(foo>=e.i)} -e:E{ascending(bar<x.i)}-> n;
	
	replace {
	}
}

rule se(x:N) {
	n:N{ascending(foo>=x.i, foo<x.i)};
	-e:E{descending(bar<n.i-x.i, bar>n.i+x.i)}->;
	
	modify {
	}
}
