frontend/test/should_fail/index_pattern_multiple_too_many_dependencies2.grg
#using "index_multiple_model.gm"

rule i {
	n1:N1;
	n2:N2;
	n:N{multiple(Ni >= n1.j, Ni <= 0, N1j >= n2.j, N1j <= 1)};
	
	modify {
	}
}
